--- a/index.html
+++ b/index.html
@@ -44,6 +44,33 @@
                 <h2 class="worker_type">- Web Designer -</h2>
         </div>
 
+        <div class="main_content">
+            <div class="greetings">
+
+                <div class="portfolio_title">
+                    
+                    <h1><img src="/img/about-icon.png" alt="about-icon">About Me</h1>
+                </div>
+
+                <div class="portfolio_img">
+                    <img src="/img/icon_2.PNG" alt="">
+                </div>
+
+                <div class="portfolio_text">
+                    <p>
+                        ポートフォリオサイトをご覧いただきありがとうございます。<br>
+                        Webデザイナーのまちたけです。Web製作を通じて地域のお客様の想いを届けるお手伝いをしております。「お客様の期待を超え感動していただく」を信条に責任を持って仕事に取り組みます。
+                    </p>
+                </div>
+            </div>
+
+            <div class="strength_section">
+                <div class="sub_title">
+                    <h1 data-en="strength">強み</h1>
+                </div>
+            </div>
+        </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
         <script type="text/javascript" src="./js/slick.min.js"></script>   
         <script src="./js/script.js"></script>
