--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
                         <a href=""><img src="./img/work_portfolio.png" alt=""></a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href=""><img src="./img/work_deirora.png" alt=""></a>
+                        <a href="https://machitake.github.io/deitora1/"><img src="./img/work_deirora1.png" alt=""></a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href=""><img src="./img/work_1.png" alt=""></a>
+                        <a href="https://machitake.github.io/bootcamp/"><img src="./img/work_1.png" alt=""></a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href=""><img src="./img/work_deitora-2.png" alt=""></a>
+                        <a href="https://machitake.github.io/deitora2/"><img src="./img/work_deitora-2.png" alt=""></a>
                     </div>
                 </div>
 
