--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="my_introduction">
                 <h1 class="name">Machitake's Portfolio</h1>
-                <h2 class="worker_type">- Web Designer -</h2>
+                <h2 class="worker_type">-- Web Designer --</h2>
         </div>
 
         <div class="main_content">
