about-icon 画像アドレス変更

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="greetings">
 
                 <div class="portfolio_title">
-                    <img src="/img/about-icon.png" alt="about-icon">
+                    <img src="https://github.com/machitake/portfolio/blob/master/img/about-icon.png?raw=true" alt="about-icon">
                     <h1>About Me</h1>
                 </div>
 
