画像アドレス変更(githubアドレス）
earth
work

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             <div class="service_section">
                 <div class="portfolio_title"> 
-                    <img src="/img/earth.png" alt="about-icon"> 
+                    <img src="https://github.com/machitake/portfolio/blob/master/img/earth.png?raw=true" alt="about-icon"> 
                     <h1>Service</h1>
                 </div>
 
@@ -164,7 +164,7 @@
 
             <div class="portfolio_section">
                 <div class="portfolio_title">  
-                    <img src="/img/work.png" alt="about-icon">
+                    <img src="https://github.com/machitake/portfolio/blob/master/img/work.png?raw=true" alt="about-icon">
                     <h1>Work</h1>
                 </div>
 
