--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/style.css">
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+
     </head>
 
     <body>
@@ -181,6 +184,9 @@
                     <div class="card_bottom-item">
                         <a href="https://machitake.github.io/deitora2/"><img src="./img/work_deitora-2.png" alt=""></a>
                     </div>
+                    <div class="card_bottom-item">
+                        <a href="https://machitake.github.io/aono/"><img src="./img/aono.png" alt=""></a>
+                    </div>
                 </div>
 
             </div>
@@ -190,6 +196,30 @@
 
 
         </div>
+
+        <footer>
+            <div class="portfolio_title">  
+                <img src="https://github.com/machitake/portfolio/blob/master/img/work.png?raw=true" alt="about-icon">
+                <h1>Contact</h1>
+            </div>
+
+            <div class="contact_warapper">
+                <div class="contact-left">
+                    <p class="contact_text">
+                        ご依頼やご相談は【TwitterのDM】よりお願いいたします
+                    </p>
+                </div>
+    
+                <div class="contact-right">
+                    <ul class="follow-me">
+                        <li><a href="https://twitter.com/machitake__" class="twitter"></a></li>
+                    </ul>
+                </div>
+            </div>
+
+
+
+        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
         <script type="text/javascript" src="./js/slick.min.js"></script>   
