about アイコン変更

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="portfolio_img">
-                    <img src="/img/icon_2.PNG" alt="">
+                    <img src="https://github.com/machitake/portfolio/blob/master/img/icon_2.PNG?raw=true" alt="">
                 </div>
 
                 <div class="portfolio_text">
