--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
 
                 <div class="slider">
                     <div class="card_bottom-item">
+                        <a href="https://machitake.github.io/sample/"><img src="./img/melinda.png" alt=""></a>
+                    </div>
+                    <div class="card_bottom-item">
                         <a href=""><img src="./img/work_portfolio.png" alt=""></a>
                     </div>
                     <div class="card_bottom-item">
