--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                     <div class="card_bottom-item">
                         <a href="https://machitake.github.io/aono/"><img src="./img/aono.png" alt=""></a>
                     </div>
+                    <div class="card_bottom-item">
+                        <a href="https://machitake.github.io/tyukyusaisyu/"><img src="./img/deitora3.png" alt=""></a>
+                    </div>
                 </div>
 
             </div>
