リニューアル

--- a/index.html
+++ b/index.html
@@ -56,25 +56,81 @@
 
                 <div class="slider wow fadeInUp">
                     <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/sample/"><img src="./img/melinda.png" alt=""></a>
+                        <a href="https://machitake.github.io/sample/"><img src="./img/melinda.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>ジムサイト</h3>
+                                <p>figmaのデザインデータをもとに１からコーデイングしました。装飾はsassを用いて保守性の高いさコーディングを意識しましたサイトの動きは全画面表示のハンバーガーメニュー、アコーディオン、スワイパー、totopボタンを使用しています</p>
+                                <p><span>制作期間：</span>5日間</p>
+                                <p><span>料金：</span>40000円〜</p>
+                            </div>
+                        </a>
+                        
                     </div>
                     <div class="card_bottom-item">
-                        <a href=""><img src="./img/work_portfolio.png" alt=""></a>
+                        <a href="">
+                            <img src="./img/work_portfolio.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>ポートフォリオサイト</h3>
+                                <p>デザインから作成いたしました。お客様に私がどう言った人なのか？何ができる人なのか？を意識して作成いたしました。お気軽にご相談いただけますと幸いです。</p>
+                                <p><span>制作期間：</span>5日間</p>
+                                <p><span>料金：</span>30000円〜</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/deitora1/"><img src="./img/work_deirora1.png" alt=""></a>
+                        <a href="https://machitake.github.io/bootcamp/">
+                            <img src="./img/work_1.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>架空の企業サイト</h3>
+                                <p>XDからのコーディングをおこないました。レスポンシブ対応。ハンバーガーメニュ、スライダー等使って動きを表現しています。</p>
+                                <p><span>制作期間：</span>5日間</p>
+                                <p><span>料金：</span>30000円〜</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/bootcamp/"><img src="./img/work_1.png" alt=""></a>
+                        <a href="https://machitake.github.io/sobolom/">
+                            <img src="./img/sobolon.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>デイトラ課題 中級編</h3>
+                                <p>デイトラのWeb制作コースで作りました。レスポンシブに対応。wow.js、ハンバーガーメニュー</p>
+                                <p><span>制作期間：</span>5日間</p>
+                                <p><span>料金：</span>40000円〜</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/deitora2/"><img src="./img/work_deitora-2.png" alt=""></a>
+                        <a href="https://machitake.github.io/deitora2/">
+                            <img src="./img/work_deitora-2.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>デイトラ課題</h3>
+                                <p>XDからのコーディングをおこないました。レスポンシブ対応.モーダル（プライバシーポリシー）等の実装</p>
+                                <p><span>制作期間：</span>5日間</p>
+                                <p><span>料金：</span>30000円〜</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/aono/"><img src="./img/aono.png" alt=""></a>
+                        <a href="https://machitake.github.io/aono/">
+                            <img src="./img/aono.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>建設会社のサイト</h3>
+                                <p>figmaのデザインデータをもとに１からコーデイングしました。レスポンシブ対応。hoverなどを用いてサイトに動きをつけています</p>
+                                <p><span>制作期間：</span>2日間</p>
+                                <p><span>料金：</span>10000円〜</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/tyukyusaisyu/"><img src="./img/deitora3.png" alt=""></a>
+                        <a href="https://machitake.github.io/tyukyusaisyu/">
+                            <img src="./img/deitora3.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>デイトラ課題</h3>
+                                <p>XDからのコーディングをおこないました。レスポンシブ対応。ハンバーガーメニュー、アコーディオン、wow.js等</p>
+                                <p><span>制作期間：</span>6日間</p>
+                                <p><span>料金：</span>50000円〜</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
