レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="card_bottom-item">
                         <a href="">
-                            <img src="./img/work_portfolio.png" alt="">
+                            <img src="./img/portfolio.png" alt="">
                             <div class="card_bottom-item-text">
                                 <h3>ポートフォリオサイト</h3>
                                 <p>デザインから作成いたしました。お客様に私がどう言った人なのか？何ができる人なのか？を意識して作成いたしました。お気軽にご相談いただけますと幸いです。</p>
@@ -176,26 +176,6 @@
                 </div>
             </div>
 
-            <div class="greetings" id='about'>
-
-                <div class="portfolio_title wow fadeInUp">
-                    <img src="https://github.com/machitake/portfolio/blob/master/img/about-icon.png?raw=true" alt="about-icon">
-                    <h1>自己紹介</h1>
-                </div>
-
-                <div class="portfolio-container wow fadeInUp">
-                    <div class="portfolio_img">
-                        <img src="https://github.com/machitake/portfolio/blob/master/img/icon_2.PNG?raw=true" alt="">
-                    </div>
-    
-                    <div class="portfolio_text">
-                        <p>
-                            Web制作を行なっているまちたけです。保守性の高いコーディングとデザインを忠実に再現したパーフェクトピクセルを意識しています。お客様の力に少しでもなれるよう精一杯やっていきたいと思います。
-                        </p>
-                    </div>
-                </div>
-            </div>
-
             <div class="service_section" id="service">
                 <div class="portfolio_title  wow fadeInUp"> 
                     <img src="https://github.com/machitake/portfolio/blob/master/img/earth.png?raw=true" alt="about-icon"> 
@@ -226,6 +206,26 @@
                         </li>
                     </ul>
 
+                </div>
+            </div>
+
+            <div class="greetings" id='about'>
+
+                <div class="portfolio_title wow fadeInUp">
+                    <img src="https://github.com/machitake/portfolio/blob/master/img/about-icon.png?raw=true" alt="about-icon">
+                    <h1>自己紹介</h1>
+                </div>
+
+                <div class="portfolio-container wow fadeInUp">
+                    <div class="portfolio_img">
+                        <img src="https://github.com/machitake/portfolio/blob/master/img/icon_2.PNG?raw=true" alt="">
+                    </div>
+    
+                    <div class="portfolio_text">
+                        <p>
+                            Web制作を行なっているまちたけです。保守性の高いコーディングとデザインを忠実に再現したパーフェクトピクセルを意識しています。お客様の力に少しでもなれるよう精一杯やっていきたいと思います。
+                        </p>
+                    </div>
                 </div>
             </div>
 
