制作実績編集

--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
                         </a>
                     </div>
                     <div class="card_bottom-item">
+                        <a href="https://machitake.github.io/tyukyusaisyu/">
+                            <img src="./img/saisyu2.png" alt="">
+                            <div class="card_bottom-item-text">
+                                <h3>架空サイト</h3>
+                                <p>XDからのコーディングをおこないました。レスポンシブ対応。ハンバーガーメニュー、アコーディオン、wow.js等</p>
+                                <p><span>制作期間：</span>6日間</p>
+                                <p><span>料金：</span>50000円〜</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card_bottom-item">
                         <a href="https://machitake.github.io/bootcamp/">
                             <img src="./img/work_1.png" alt="">
                             <div class="card_bottom-item-text">
@@ -121,17 +132,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="card_bottom-item">
-                        <a href="https://machitake.github.io/tyukyusaisyu/">
-                            <img src="./img/deitora3.png" alt="">
-                            <div class="card_bottom-item-text">
-                                <h3>デイトラ課題</h3>
-                                <p>XDからのコーディングをおこないました。レスポンシブ対応。ハンバーガーメニュー、アコーディオン、wow.js等</p>
-                                <p><span>制作期間：</span>6日間</p>
-                                <p><span>料金：</span>50000円〜</p>
-                            </div>
-                        </a>
-                    </div>
+                    
                 </div>
 
             </div>
