ハンバーガーメニュー編集

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <div class="nav-wrapper"><!-- ナビゲーションメニュー(全画面) -->
                 <nav class="header-nav">
                   <ul class="nav-list">
-                    <li class="nav-item"><a href="#about">About Me</a></li>
-                    <li class="nav-item"><a href="#strength">Strength</a></li>
+                    <li class="nav-item"><a href="#work">制作実績</a></li>
+                    <li class="nav-item"><a href="#skill">スキル</a></li>
                     <li class="nav-item"><a href="#skill">skill</a></li>
-                    <li class="nav-item"><a href="#service">Service</a></li>
-                    <li class="nav-item"><a href="#work">Work</a></li>
-                    <li class="nav-item"><a href="#contact">Contact</a></li>
+                    <li class="nav-item"><a href="#service">サービス</a></li>
+                    <li class="nav-item"><a href="#about">自己紹介</a></li>
+                    <li class="nav-item"><a href="#contact">お問い合わせ</a></li>
                   </ul>
                 </nav>
             </div>
@@ -340,6 +340,10 @@
 
 
         </footer>
+
+        <div class="test">
+            
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
         <script type="text/javascript" src="./js/slick.min.js"></script>   
