--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 <img src="img/html.png" alt="">
                             </div>
                             <h2>HTML</h2>
-                            <p>お客様の要望、意図を読み取り、計画的にマークアップいたします。</p>
+                            <p>お客様の要望、意図を読み取り、計画的にマークアップいたします。またクラスの命名などはBEM設計をもとにコーディングしております。</p>
                         </li>
                         <li class="skill wow fadeInUp">
                             <div class="skill-img">
@@ -186,21 +186,27 @@
                 <div class="introduction_text">
                     <ul>
                         <li class="service_item  wow fadeInUp">
-                            <img src="img/coding.png" alt="">
-                            <h2>コーディング</h2>
+                            <div class="service-img">
+                                <img src="img/coding.png" alt="">
+                            </div>
+                            <h2>コーディング代行</h2>
                             <span>料金:30000~</span>
                             <p>お客様からお預かりしたデザインデータをもとに丁寧にコーディングいたします。</p>
                         </li>
 
                         <li class="service_item  wow fadeInUp">
-                        <img src="img/lp.png" alt="">
+                            <div class="service-img">
+                                <img src="img/lp.png" alt="">
+                            </div>
                             <h2>LP製作</h2>
                             <span>料金:50000~</span>
                             <p>デザインからコーディングまでお客様のご要望に添って適切に制作いたします。</p>
                         </li>
 
                         <li class="service_item  wow fadeInUp">
-                            <img src="img/web.png" alt="">
+                            <div class="service-img">
+                                <img src="img/web.png" alt="">
+                            </div>
                             <h2>Webサイト製作</h2>
                             <span>料金:100000~</span>
                             <p>お客様からお預かりしたデザインデータをもとに丁寧にコーディングいたします。</p>
@@ -224,7 +230,7 @@
     
                     <div class="portfolio_text">
                         <p>
-                            Web制作を行なっているまちたけです。保守性の高いコーディングとデザインを忠実に再現したパーフェクトピクセルを意識しています。お客様の力に少しでもなれるよう精一杯やっていきたいと思います。
+                            Web制作を行なっているまちたけです。保守性の高いコーディングとデザインを忠実に再現したパーフェクトピクセルを意識しています。お客様の力に少しでもなれるよう精一杯やっていきたいと思っております。
                         </p>
                     </div>
                 </div>
